@@ -8,7 +8,7 @@
 		<groupId>com</groupId>
 		<artifactId>constructxpert-services</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
-		<relativePath>../pom.xml</relativePath> <!-- chemin relatif vers le fichier parent pom.xml -->
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 
 	<artifactId>resource-service</artifactId>
@@ -22,6 +22,9 @@
 		<maven.compiler.target>21</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<start-class>com.resource_service.ResourceServiceApplication</start-class>
+		<sonar.projectKey>kettaabii_MicroservicesProject</sonar.projectKey>
+		<sonar.organization>kettaabii</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 
 	<dependencies>
@@ -47,10 +50,12 @@
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
 
+
 	</dependencies>
 
 	<build>
 		<plugins>
+			<!-- Spring Boot Maven Plugin -->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
@@ -69,22 +74,36 @@
 					</execution>
 				</executions>
 			</plugin>
+
+			<!-- Maven Compiler Plugin -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.10.1</version> <!-- Utilisez une version récente compatible avec Java 21 -->
 				<configuration>
 					<source>${java.version}</source>
 					<target>${java.version}</target>
 					<compilerArgs>
 						<arg>--enable-preview</arg>
+						<arg>-Xlint:preview</arg> <!-- Optionnel : pour des avertissements détaillés -->
 					</compilerArgs>
+					<fork>true</fork>
 				</configuration>
 			</plugin>
+
+			<!-- Maven Surefire Plugin pour les tests -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.3.1</version>
+				<version>3.2.5</version>
+				<configuration>
+					<argLine>--enable-preview</argLine>
+					<forkCount>1</forkCount>
+					<reuseForks>false</reuseForks>
+				</configuration>
 			</plugin>
+
+			<!-- Sonar Maven Plugin -->
 			<plugin>
 				<groupId>org.sonarsource.scanner.maven</groupId>
 				<artifactId>sonar-maven-plugin</artifactId>
